--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -21,7 +21,7 @@ openapi-codec==1.3.2
 openpyxl==3.1.2
 packaging==23.2
 Pillow==10.1.0
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 PyJWT==2.8.0
 python-dateutil==2.8.2
 pytz==2023.3.post1
