--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,8 +5,10 @@ coreapi==2.3.3
 coreschema==0.0.4
 datefinder==0.7.3
 Django==4.2.7
+django-cleanup==8.0.0
 django-cors-headers==4.3.0
 django-rest-swagger==2.2.0
+django-sslserver==0.22
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
 drf-yasg==1.21.7
