[Docker] Service Ngrok Используется для развёртывания решения на сервисе Ngrok, развёртывает frontend и backend части используя конфиг ngrok.yml На localhost:4040 можно увидеть подробную информацию о работе протоколов HTTPS и передачи данных

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,5 +14,6 @@ WORKDIR /api
 RUN adduser --disabled-password --no-create-home django
 USER django
 
-# Prod version 
-CMD ["uwsgi", "--socket", ":9000", "--workers", "4", "--master", "--enable-threads", "--module", "app.wsgi"]
+
+COPY ./entrypoint.sh / 
+ENTRYPOINT [ "sh", "/entrypoint.sh" ]
