Updated Readme.md and added comments for docker files

--- a/backend/docker/ngrok/ngrok.yml
+++ b/backend/docker/ngrok/ngrok.yml
@@ -1,27 +1,35 @@
 version: 2
 
+# Токен аккаунта команды, статус аккаунта Free
 authtoken: 2Y2TsNdca4DtvFTHBpYWgf1LngA_36b6x9XRmwuf8zzfKk9LY
 
 connect_timeout: 30s
+
+# Внешний вид сервиса
 console_ui: true
 console_ui_color: transparent
+
+# DNS адреса (Google.com)
 dns_resolver_ips:
   - 8.8.8.8
   - 8.8.4.4
 heartbeat_interval: 1m
 heartbeat_tolerance: 5s
 
+# Уровень логирования сервиса
 log_level: info
 log_format: json
 
-
+# Наиболее близкий регион Дальнего Востока, ru регион не работает из-за санкций
 region: jp
 
 update_channel: stable
 update_check: false
 
+# Адрес службы localhost:4040
 web_addr: 0.0.0.0:4040
 
+# Тунелирование частей frontend и backend
 tunnels:
   react_app:
     proto: http
@@ -31,7 +39,5 @@ tunnels:
   django_web:
     proto: http
     addr: django_web:8000
-    
-  # Django создаётся командой
-    # ngrok http django_web:8000 --authtoken 2Y2TsNdca4DtvFTHBpYWgf1LngA_36b6x9XRmwuf8zzfKk9LY 
+
     
