--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,5 +1,7 @@
 FROM node:18-alpine
 
+LABEL MAINTAINER: Andrew Medvedev hydra1337channel@gmail.com
+
 WORKDIR /app
 COPY package*.json ./
 RUN npm install
