--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,13 @@
     "@hookform/resolvers": "^3.3.2",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@react-input/mask": "^1.0.20",
     "@tanstack/react-query": "^5.8.1",
     "next": "14.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
+    "react-toastify": "^9.1.3",
     "zod": "^3.22.4"
   },
   "devDependencies": {
