--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -18,7 +18,7 @@ services:
       - backend_net
 
   pgdb:
-    image: postgres
+    image: postgres:latest
     container_name: pgdb
     restart: always
     volumes:
